# axiom-rl

./: .gitignore  LICENSE  README.md  pyproject.toml  temp_audit.md
axiom/: __init__.py  config.py
axiom/benchmarks/: README.md  __init__.py  base.py  registry.py  run.py  utils.py
axiom/coldstart/: __init__.py  claude_client.py  gemini_client.py  trace_generator.py
axiom/experiments/: __init__.py  evaluation.py  grokking.py  metrics.py  self_improve.py  self_improve_v2.py  visualization.py
docs/: critical-analysis-problem-design.md  optimization-lora-merge.md  phase0-cold-start.md  phase5-procedural-generation.md  phase6-grokking-experiment.md  phase6-results-explanation.md  phase6-self-improvement-results.md  phase7-v2-problem-design.md  running_phases.md  validation_guide.md
experiments/: README.md
notebooks/: axiom_self_improve_colab.ipynb  axiom_v2_step_by_step.ipynb  experiment_15_mgrpo.ipynb  experiment_15_mgrpo_standalone.ipynb  experiment_16_mgrpo_standalone.ipynb  experiment_17_internal_rl.ipynb  qwen_1_5b_grpo_colab.ipynb
scripts/: evaluate_sft_v2.py  export_to_colab.py  fast_validate.py  generate_hard_traces.py  generate_procedural.py  generate_synthetic_nqueens.py  generate_teacher_data.py  generate_teacher_data_v2.py  generate_traces_with_claude.py  plot_grokking.py  run_exp17_local.py  run_focused_improvement.py  run_grokking_experiment.py  run_grpo_curriculum.py  run_grpo_hard.py  run_grpo_nqueens_curriculum.py  run_hard_distillation.py  run_mgrpo.py  run_mgrpo_exp16.py  run_pipeline.py  run_self_improve.py  run_self_improve_v2.py  run_training.py  run_with_replay.py  test_grpo_trainer.py  test_grpo_verifier.py  test_hard_problems.py  test_procedural.py  test_procedural_dataset.py  test_v2_generators.py  test_verifier_isolation.py  validate_grpo_learning.py  validate_grpo_v2.py  verify_sft_model.py
(+129 files in other folders)
